# clang-ifso

./: AddCmake.sh  CMakeLists.txt  clang-ifso.cpp
examples/: bar.cpp  bar.h  foo.cpp  main.cpp
lsif/: CMakeLists.txt  lsif.cpp
